wszystkie podstrony html + css

--- a/logIn.html
+++ b/logIn.html
@@ -79,14 +79,13 @@
 
                 </div>
                 <ul class="font-weight-bold mt-3">
-                    <li><a href="#">Aktualności</a></li>
+                    <li><a href="news.html">Aktualności</a></li>
                     <li><a href="search_connection_form.html">Szukaj połączenia</a></li>
-                    <li><a href="#">Mapa</a></li>
-                    <li><a href="#">Przeglądaj rozkład</a></li>
-                    <li><a href="#">Moje bilety</a></li>
+                    <li><a href="map.html">Mapa</a></li>
+                    <li><a href="browserTimetable.html">Przeglądaj rozkład</a></li>
+                    <li><a href="myTickets.html">Moje bilety</a></li>
                     <li><a href="edit_profile.html">Moje dane</a></li>
-                    <li><a href="#">Wyloguj</a></li>
-
+                    <li><a href="logout.html">Wyloguj</a></li>
                 </ul>
             </div>
         </div>
