--- a/search_connection_form.html
+++ b/search_connection_form.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html>
 
 <head>
@@ -24,10 +24,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-
+  <style>
+    #inputdestination{
+      margin-left: 30px;
+      text-align: center;
+      height:40px;
+      color: #495057;
+      background-color: #fff;
+      border: 1px solid #ced4da;
+    }
+  </style>
 </head>
 
-<body>
+<body onload="removeCookies()">
   <nav>
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -65,12 +74,22 @@
   <main class="mt-5">
     <div id="connection_form" style="width:90%;margin: auto;">
       <div class="row">
+        <!-- <div class="form-group col-12">
+          <input type="text" class="form-control" id="inputstart" placeholder="Stacja początkowa" readonly>
+        </div> -->
         <div class="form-group col-12">
-          <input type="text" class="form-control" id="inputstart" placeholder="Stacja początkowa">
+          <input type="text" class="form-control" id="inputstart" value="Kraków" readonly>
         </div>
-        <div class="form-group col-12">
+        <!-- <div class="form-group col-12">
           <input type="text" class="form-control" id="inputdestination" placeholder="Stacja końcowa">
-        </div>
+        </div> -->
+        <select class="form-select form-select-sm mb-3 col-10" id="inputdestination" aria-label=".form-select-sm example">
+          <!-- <option selected>Stacja końcowa</option> -->
+          <option value="Katowice">Katowice</option>
+          <option value="Kielce">Kielce</option>
+          <option value="Warszawa">Warszawa</option>
+          <option value="Rzeszów">Rzeszów</option>
+        </select>
       </div>
 
       <div class="row">
@@ -80,7 +99,7 @@
         </div>
         <div class="form-group col-6">
 
-          <input type="time" class="form-control" id="inputtime" placeholder="HH:MM">
+          <input type="text" class="form-control" id="inputtime" placeholder="hh.mm">
         </div>
         <div class="form-group col-6">
 
@@ -95,110 +114,15 @@
         </label>
         <p class="mt-2 ml-3 font-weight-bold" style="color:rgb(43, 87, 154)">Bez przesiadek</p>
       </div>
-      <button onclick="search_connections2()" class="mt-3 btn mx-auto col-12 font-weight-bold"
-        style="color: white;background-color: rgb(43, 87, 154);border-radius: 15px;">Szukaj połączeń</button>
-
+      <a href="availableConnections.html"><button onclick="search()" class="mt-3 btn mx-auto col-12 font-weight-bold"
+        style="color: white;background-color: rgb(43, 87, 154);border-radius: 15px;">Szukaj połączeń</button></a> 
+        <!-- <button onclick="search()" class="mt-3 btn mx-auto col-12 font-weight-bold"
+          style="color: white;background-color: rgb(43, 87, 154);border-radius: 15px;">Szukaj połączeń</button> -->
     </div>
 
-    <div id="avaliable_connections" class="mt-5">
-
-      <div id="connection_card" class="row mx-auto col-10 mt-3" onclick="buy_ticket(this)"
-        style="box-shadow: 0 0 10px 0;border-radius: 15px;background-color: white;">
-        <div class="col-7 p-2 mt-3">
-          <div class="start-point font-weight-bold row">
-            <p style="margin-left: 5%;margin-right: 3%;color: rgb(43, 87, 154);text-align: center">&#8226; </p>
-          </div>
-          <div class="destination-point font-weight-bold row">
-            <p style="margin-left: 5%;margin-right: 3%;color: rgb(43, 87, 154);text-align: center">&#8226; </p>
-          </div>
-        </div>
-        <div class="col-5 mt-4">
-
-          <p class="start-point-time font-weight-bold"></p>
-
-          <p class="destination-point-time font-weight-bold"></p>
-        </div>
-      </div>
-
-    </div>
+    
   </main>
-  <script>
-    document.getElementById('avaliable_connections').hidden = true;
-    document.getElementById('connection_card').hidden = true;
-    document.cookie = "";
-    function buy_ticket(elem) {
-      document.cookie = "index=" + elem.id.charAt(elem.id.length - 1) + ";";
-
-    }
-    function search_connections2() {
-      window.location.replace('./buyTicket.html');
-    }
-    function search_connections() {
-      console.log("HELLO");
-      var con;
-      fetch('connections.json')
-        .then(response => response.json())
-        .then(async jsonResponse => {
-          let title_nav = document.getElementById('nav-title');
-
-          if ((document.getElementById('inputstart').value.length != 0) && (document.getElementById('inputdestination').value.length != 0) && (document.getElementById('inputdate').value.length != 0) && (document.getElementById('inputtime').value.length != 0)) {
-            title_nav.innerText = document.getElementById('inputstart').value + '->' + document.getElementById('inputdestination').value;
-            document.getElementById('proposition-text').innerText = "Oto proponowane połączenia";
-            document.getElementById('date-text').innerText = document.getElementById('inputdate').value + " " + document.getElementById('inputtime').value;
-            document.getElementById('avaliable_connections').hidden = false;
-            document.getElementById('connection_form').hidden = true;
-            for (var x = 0; x < jsonResponse['connections'].length; x++) {
-              console.log(jsonResponse['connections'][x]['start']);
-              console.log(document.getElementById('inputdate').value + " " + jsonResponse['connections'][x]['date']);
-              if ((document.getElementById('inputstart').value == jsonResponse['connections'][x]['start']) && (document.getElementById('inputdestination').value == jsonResponse['connections'][x]['destination']) && (document.getElementById('inputdate').value == jsonResponse['connections'][x]['date'])) {
-
-                var new_card = document.getElementById('connection_card').cloneNode(true);
-                new_card.setAttribute("id", "connection_card_" + x);
-
-                async function sleepUntil(f, timeoutMs) {
-                  return new Promise((resolve, reject) => {
-                    let timeWas = new Date();
-                    let wait = setInterval(function () {
-                      if (f()) {
-                        console.log("resolved after", new Date() - timeWas, "ms");
-                        clearInterval(wait);
-                        resolve();
-                      } else if (new Date() - timeWas > timeoutMs) { // Timeout
-                        console.log("rejected after", new Date() - timeWas, "ms");
-                        clearInterval(wait);
-                        reject();
-                      }
-                    }, 0);
-                  });
-                }
-
-
-                await sleepUntil(() => document.getElementById('avaliable_connections').appendChild(new_card), 5000);
-                document.getElementById('connection_card_' + x).hidden = false;
-                var temp = document.getElementById('connection_card_' + x);
-                console.log(temp);
-                temp.getElementsByClassName('start-point')[0].appendChild(document.createElement("P").appendChild(document.createTextNode(jsonResponse['connections'][x]['start'])));
-                temp.getElementsByClassName('destination-point')[0].appendChild(document.createElement("P").appendChild(document.createTextNode(jsonResponse['connections'][x]['destination'])));
-                temp.getElementsByClassName('start-point-time')[0].appendChild(document.createElement("p").appendChild(document.createTextNode(jsonResponse['connections'][x]['start_time'])));
-                temp.getElementsByClassName('destination-point-time')[0].appendChild(document.createElement("p").appendChild(document.createTextNode(jsonResponse['connections'][x]['destination_time'])));
-
-              } else {
-                console.log('shit');
-              }
-            }
-          }
-        })
-      // outputs a javascript object from the parsed json
-    }
-    function openNav() {
-      document.getElementById("myNav").style.width = "80%";
-      console.log(document.getElementById('connection_card_0'));
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
+  <script src="./app.js"> </script>
 
 
 </body>
