--- a/search_connection_form.html
+++ b/search_connection_form.html
@@ -123,7 +123,18 @@
     
   </main>
   <script src="./app.js"> </script>
+  <script>
+    function openNav() {
+        document.getElementById("myNav").style.width = "75%";
+    }
 
+    function closeNav() {
+        document.getElementById("myNav").style.width = "0%";
+    }
+    function search_connections2() {
+        window.location.replace('./search_connection_form.html');
+    }
+</script>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
