--- a/buyTicket.html
+++ b/buyTicket.html
@@ -138,16 +138,20 @@
             <p class="text-right">Odjazd: <strong id="timeLeave"></strong></p>
         </div>
         <div class="ticket_main_info_road container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-8">
                     <span class="dot"></span>
-                    Kraków Bronowice
+                    <i class="nameStation">Bronowice</i>
                 </div>
                 <div class="col">
 
                 </div>
-            </div>
+            </div> -->
         </div>
+        <script type="text/javascript">
+            fillStations();
+        </script>
+        
         <div class="ticket_main_info_from_to">
             <p class="font-weight-bold endCityName"></p>
             <p class="text-right">Przyjazd: <strong id="timeArrive"></strong></p>
