--- a/assumeTicket.html
+++ b/assumeTicket.html
@@ -127,7 +127,7 @@
     <script src="./app.js" ></script>
 </head>
 
-<body onload="getDataFromQueryString()"> 
+<body onload='getDataFromQueryString("assumeTicket")'> 
     <nav id="header">
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
