--- a/buyTicket.html
+++ b/buyTicket.html
@@ -96,7 +96,7 @@
     <script src="./app.js"></script>
 </head>
 
-<body onload="getDataFromQueryString()" >
+<body onload='getDataFromQueryString("buyTicket")' >
     <nav id="header">
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
