--- a/chooseOffer.html
+++ b/chooseOffer.html
@@ -116,7 +116,7 @@
     <script src="./app.js" ></script>
 </head>
 
-<body onload="getDataFromQueryString()">
+<body onload='getDataFromQueryString("chooseOffer")'>
     <nav id="header">
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
