--- a/buyTicket.html
+++ b/buyTicket.html
@@ -12,10 +12,6 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/menu_template.css">
 
@@ -107,7 +103,7 @@
                     <!-- <p><i class="fa fa-user-circle" style="font-size: 50px;"></i></p> -->
                     <div>
                         <p style="font-size: 12px;" class="ml-3">Dzień dobry</p>
-                        <h4 style="padding-top: 0px;" class="ml-3 font-weight-bold">Kamil Kowalski</h4>
+                        <h4 style="padding-top: 0px;" class="ml-3 font-weight-bold">Marek Nowak</h4>
                     </div>
 
                 </div>
@@ -115,11 +111,16 @@
                     <li><a href="news.html">Aktualności</a></li>
                     <li><a href="search_connection_form.html">Szukaj połączenia</a></li>
                     <li><a href="map.html">Mapa</a></li>
-                    <li><a href="browserTimetable.html">Przeglądaj rozkład</a></li>
+                    <!-- <li><a href="browserTimetable.html">Przeglądaj rozkład</a></li> -->
                     <li><a href="myTickets.html">Moje bilety</a></li>
                     <li><a href="edit_profile.html">Moje dane</a></li>
                     <li><a href="logout.html">Wyloguj</a></li>
-                </ul>
+                    <li><a href="help_page.html">Pomoc</a></li> 
+                  </ul>
+                  <div id="buttons" class="d-flex justify-content-around">
+                    <a href="logIn.html" class="btn btn-primary btn-md active" role="button">Zaloguj się</a>
+                    <a href="register.html" class="btn btn-primary btn-md active" role="button">Zarejestruj się</a>
+                  </div>
             </div>
         </div>
         <div id="menu_button">
@@ -165,7 +166,7 @@
                 d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
         </svg>
         
-        <a href="#" class="btn btn-primary btn-lg active" role="button">Śledź</a>
+        <!-- <a href="#" class="btn btn-primary btn-lg active" role="button">Śledź</a> -->
         <!-- <a href="chooseOffer.html" class="btn btn-primary btn-lg active" role="button">Kup bilet</a> -->
         <!-- <script type="text/javascript">
             createLink();
