--- a/logIn.html
+++ b/logIn.html
@@ -12,10 +12,6 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/menu_template.css">
 
@@ -74,7 +70,7 @@
                     <!-- <p><i class="fa fa-user-circle" style="font-size: 50px;"></i></p> -->
                     <div>
                         <p style="font-size: 12px;" class="ml-3">Dzień dobry</p>
-                        <h4 style="padding-top: 0px;" class="ml-3 font-weight-bold">Kamil Kowalski</h4>
+                        <h4 style="padding-top: 0px;" class="ml-3 font-weight-bold">Marek Nowak</h4>
                     </div>
 
                 </div>
@@ -82,11 +78,16 @@
                     <li><a href="news.html">Aktualności</a></li>
                     <li><a href="search_connection_form.html">Szukaj połączenia</a></li>
                     <li><a href="map.html">Mapa</a></li>
-                    <li><a href="browserTimetable.html">Przeglądaj rozkład</a></li>
+                    <!-- <li><a href="browserTimetable.html">Przeglądaj rozkład</a></li> -->
                     <li><a href="myTickets.html">Moje bilety</a></li>
                     <li><a href="edit_profile.html">Moje dane</a></li>
                     <li><a href="logout.html">Wyloguj</a></li>
-                </ul>
+                    <li><a href="help_page.html">Pomoc</a></li> 
+                  </ul>
+                  <div id="buttons" class="d-flex justify-content-around">
+                    <a href="logIn.html" class="btn btn-primary btn-md active" role="button">Zaloguj się</a>
+                    <a href="register.html" class="btn btn-primary btn-md active" role="button">Zarejestruj się</a>
+                  </div>
             </div>
         </div>
 
@@ -101,10 +102,10 @@
         <form>
             <div class="form-group">
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
+                    placeholder="Enter email" disabled>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" disabled>
             </div>
             <a href="fillTicketData.html"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue"
                     class="bi bi-arrow-right-circle-fill float-right" viewBox="0 0 16 16">
