--- a/search_connection_form.html
+++ b/search_connection_form.html
@@ -102,6 +102,7 @@
     <div id="message-box" onclick="startMessage()" >
       <p>Witaj użytkowniku!</p>
       <p>Oto pierwsza wersja naszej aplikacji obługująca podstawowe funkcje</p>
+      <p>Zalecane urządzenie do testowania aplikacji: iPhone X/ iPhone 12 Pro </p>
       <p>Dostępne są połączenia między kilkoma miastami w datach od 12.01.2022 do 14.01.2022</p>
       <p>Aplikacja posiada jedno konto użytkownika <b>Marek Nowak</b> </p>
       <p>Życzymy miłego testowania aplikacji!</p>
